Refactoring to address PR comments
- Added _theme.scss to centralise the customisable styles
- Cross-theme styles kept in _variables.scss and reverted back to sass variables to prevent unwanted manipulation
- CSS variable names + application within selectors made more semantic and granular

--- a/src/app/dim-ui/Dropdown.m.scss
+++ b/src/app/dim-ui/Dropdown.m.scss
@@ -7,7 +7,7 @@
 
 .menu {
   position: absolute;
-  background: var(--theme-fill-primary);
+  background: var(--theme-background-dropdown-menu);
   color: white;
   font-size: 12px;
   z-index: 100;
