--- a/src/app/dim-ui/destiny-symbols/SymbolsPicker.m.scss
+++ b/src/app/dim-ui/destiny-symbols/SymbolsPicker.m.scss
@@ -4,10 +4,10 @@
 .symbolsWindow {
   width: 300px;
   height: 350px;
-  background-color: var(--theme-fill-primary);
+  background-color: var(--theme-background-dropdown-menu);
   display: flex;
   flex-flow: column;
-  box-shadow: var(--theme-drop-shadow-framed);
+  box-shadow: var(--theme-drop-shadow);
 }
 
 .symbolsButton {
