--- a/src/app/item-feed/ItemFeedSidebar.m.scss
+++ b/src/app/item-feed/ItemFeedSidebar.m.scss
@@ -2,6 +2,7 @@
 
 .trayContainer {
   position: fixed;
+
   @include below-header;
   right: 0;
   height: calc(var(--viewport-height) - var(--header-height));
@@ -15,7 +16,7 @@
 }
 
 .sideTray {
-  background-color: var(--theme-fill-primary);
+  background-color: var(--theme-background-item-feed);
   padding: 10px;
   overflow-y: auto;
   overflow-x: hidden;
