--- a/src/app/loadout-drawer/LoadoutDrawerHeader.m.scss
+++ b/src/app/loadout-drawer/LoadoutDrawerHeader.m.scss
@@ -16,7 +16,7 @@
 .dimInput {
   padding-left: 5px;
   height: 23px;
-  background: var(--theme-fill-darken);
+  background: var(--theme-input);
   border: none;
   border-bottom: 1px solid #555;
   color: white;
