--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -14,7 +14,7 @@
   padding-left: 5px;
   padding-right: 5px;
   height: 32px;
-  border-radius: var(--theme-corner-radius-search);
+  border-radius: $theme-corner-radius-search;
   min-width: 350px;
   box-sizing: border-box;
 
