--- a/src/app/dim-ui/PressTip.m.scss
+++ b/src/app/dim-ui/PressTip.m.scss
@@ -17,8 +17,8 @@ $horizontal-padding: 11px;
   width: fit-content;
   max-width: 306px;
   border: 1px solid var(--theme-tooltip-border-color);
-  border-top-width: var(--theme-tooltip-corner-radius);
-  border-radius: var(--theme-tooltip-corner-radius);
+  border-top-width: $theme-tooltip-corner-radius;
+  border-radius: $theme-tooltip-corner-radius;
   box-shadow: 0 0 24px 6px #080811;
   text-align: left;
   z-index: 99999;
@@ -33,11 +33,11 @@ $horizontal-padding: 11px;
     display: block;
     position: absolute;
     background-color: var(--theme-tooltip-border-color);
-    height: var(--theme-tooltip-corner-radius);
-    top: calc(-1 * var(--theme-tooltip-corner-radius));
+    height: $theme-tooltip-corner-radius;
+    top: calc(-1 * $theme-tooltip-corner-radius);
     left: -1px;
     right: -1px;
-    border-radius: var(--theme-tooltip-corner-radius) var(--theme-tooltip-corner-radius) 0 0;
+    border-radius: $theme-tooltip-corner-radius $theme-tooltip-corner-radius 0 0;
   }
 
   &.wideTooltip {
@@ -60,6 +60,7 @@ $horizontal-padding: 11px;
       font-size: 14px;
       margin: 0;
       color: white;
+
       @include destiny-header;
     }
 
@@ -75,12 +76,12 @@ $horizontal-padding: 11px;
   }
 
   .arrow {
-    width: var(--theme-tooltip-arrow-size);
-    height: var(--theme-tooltip-arrow-size);
+    width: $theme-tooltip-arrow-size;
+    height: $theme-tooltip-arrow-size;
     border-style: solid;
     position: absolute;
     border-color: transparent;
-    border-width: var(--theme-tooltip-arrow-size);
+    border-width: $theme-tooltip-arrow-size;
   }
 
   &[data-popper-placement='top'] .arrow {
@@ -88,28 +89,28 @@ $horizontal-padding: 11px;
     height: 0;
     border-bottom-width: 0;
     border-top-color: var(--theme-tooltip-border-color);
-    bottom: calc(var(--theme-tooltip-arrow-size) * -1);
+    bottom: calc($theme-tooltip-arrow-size * -1);
   }
   &[data-popper-placement='bottom'] .arrow {
     width: 0;
     height: 0;
     border-top-width: 0;
     border-bottom-color: var(--theme-tooltip-border-color);
-    top: calc(calc(-1 * var(--theme-tooltip-corner-radius)) - var(--theme-tooltip-arrow-size));
+    top: calc(calc(-1 * $theme-tooltip-corner-radius) - $theme-tooltip-arrow-size);
   }
   &[data-popper-placement='right'] .arrow {
     width: 0;
     height: 0;
     border-left-width: 0;
     border-right-color: var(--theme-tooltip-border-color);
-    left: calc(var(--theme-tooltip-arrow-size) * -1);
+    left: calc($theme-tooltip-arrow-size * -1);
   }
   &[data-popper-placement='left'] .arrow {
     width: 0;
     height: 0;
     border-right-width: 0;
     border-left-color: var(--theme-tooltip-border-color);
-    right: calc(var(--theme-tooltip-arrow-size) * -1);
+    right: calc($theme-tooltip-arrow-size * -1);
   }
 
   &.minimalTooltip {
@@ -127,17 +128,13 @@ $horizontal-padding: 11px;
       padding: 3px 6px;
     }
 
-    .arrow {
-      --theme-tooltip-arrow-size: 6px;
-    }
-
     &[data-popper-placement='left'] .arrow {
       border-left-color: var(--theme-tooltip-minimal-color);
-      top: calc(var(--theme-tooltip-arrow-size) / 2) !important;
+      top: calc($theme-tooltip-arrow-size-mini / 2) !important;
     }
     &[data-popper-placement='right'] .arrow {
       border-right-color: var(--theme-tooltip-minimal-color);
-      top: calc(var(--theme-tooltip-arrow-size) / 2) !important;
+      top: calc($theme-tooltip-arrow-size-mini / 2) !important;
     }
     &[data-popper-placement='top'] .arrow {
       border-top-color: var(--theme-tooltip-minimal-color);
@@ -145,7 +142,7 @@ $horizontal-padding: 11px;
     }
     &[data-popper-placement='bottom'] .arrow {
       border-bottom-color: var(--theme-tooltip-minimal-color);
-      top: calc(var(--theme-tooltip-arrow-size) * -1) !important;
+      top: calc($theme-tooltip-arrow-size-mini * -1) !important;
     }
   }
 
