--- a/src/app/dim-ui/Select.m.scss
+++ b/src/app/dim-ui/Select.m.scss
@@ -8,7 +8,7 @@
 }
 
 .menu {
-  background: black;
+  background: var(--theme-background-dropdown-menu);
   color: white;
   font-size: 12px;
   z-index: 100;
@@ -24,6 +24,7 @@
   align-items: center;
   min-width: 10em;
   padding: 6px 9px;
+
   @include phone-portrait {
     padding: 10px 16px;
     font-size: 14px;
