--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -6,6 +6,7 @@
 // Prefer CSS modules, or at least stylesheets that are imported directly by the components that need them, to putting things here.
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 @use 'variables.scss' as *;
+@use 'theme';
 
 @font-face {
   font-family: 'Destiny Symbols';
@@ -168,7 +169,7 @@ body {
   margin: 0 auto;
   background-color: #313233;
   color: white;
-  font-family: var(--theme-font-primary), sans-serif, 'Destiny Symbols';
+  font-family: 'Open Sans', sans-serif, 'Destiny Symbols';
   font-size: 12px;
   line-height: calc(16 / 12);
   accent-color: var(--theme-accent-primary);
@@ -198,7 +199,7 @@ h4 {
 input,
 select,
 option {
-  font-family: var(--theme-font-primary), sans-serif, 'Destiny Symbols';
+  font-family: 'Open Sans', sans-serif, 'Destiny Symbols';
 }
 
 input[type='search'] {
@@ -208,7 +209,7 @@ input[type='search'] {
 textarea {
   width: 100%;
   height: 30px;
-  background-color: var(--theme-fill-darken);
+  background-color: var(--theme-input);
   padding: 4px 8px;
   border: none;
   outline: none;
