--- a/src/app/shell/Header.m.scss
+++ b/src/app/shell/Header.m.scss
@@ -29,7 +29,7 @@ $header-height: 44px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  background: var(--theme-background-app-header-primary);
+  background: var(--theme-background-app-header-nav);
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
@@ -165,7 +165,7 @@ $header-height: 44px;
   margin: 0;
   padding: 0;
   min-width: 150px;
-  background-color: var(--theme-fill-primary);
+  background-color: var(--theme-background-app-header-nav-slideout-menu);
   padding-left: env(safe-area-inset-left);
   padding-bottom: Max(4px, env(safe-area-inset-bottom));
   flex-direction: column;
