Hack together a graph

--- a/src/app/store-stats/StatTooltip.m.scss
+++ b/src/app/store-stats/StatTooltip.m.scss
@@ -34,3 +34,17 @@
 .breakdownValue {
   justify-self: end;
 }
+
+.graph {
+  display: flex;
+  flex-direction: row;
+  gap: 2px;
+  align-items: flex-end;
+}
+.bar {
+  background-color: #888;
+  width: 10px;
+}
+.barCurrent {
+  background-color: #fff;
+}
