--- a/src/app/item-popup/ItemSocketsGeneral.m.scss
+++ b/src/app/item-popup/ItemSocketsGeneral.m.scss
@@ -14,6 +14,9 @@
 }
 .minimalSockets {
   flex-flow: column nowrap;
+  > * {
+    margin-bottom: 8px !important;
+  }
 }
 .generalSockets {
   margin: 10px;
