No more sockets class

--- a/src/app/item-popup/ItemSocketsWeapons.m.scss
+++ b/src/app/item-popup/ItemSocketsWeapons.m.scss
@@ -1,7 +1,9 @@
 @use '../variables.scss' as *;
 
 .weaponSockets {
+  display: flex;
   flex-flow: column nowrap;
+  margin-top: 10px;
 }
 
 .perks {
