--- a/src/app/item-popup/ItemSocketsWeapons.m.scss
+++ b/src/app/item-popup/ItemSocketsWeapons.m.scss
@@ -49,4 +49,28 @@
   .minimal & {
     margin: 0;
   }
+
+  :global(.socket-container) {
+    padding: calc(2 / 50 * var(--item-size));
+    margin-bottom: 1px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    img,
+    :global(.perk-circle) {
+      border: none;
+      width: calc(32 / 50 * var(--item-size));
+      height: calc(32 / 50 * var(--item-size));
+    }
+
+    @include phone-portrait {
+      padding: 2px;
+      img,
+      :global(.perk-circle) {
+        width: 32px;
+        height: 32px;
+      }
+    }
+  }
 }
