--- a/src/app/item-popup/Plug.m.scss
+++ b/src/app/item-popup/Plug.m.scss
@@ -36,3 +36,11 @@
 .selectable {
   cursor: pointer;
 }
+
+.hasMenu {
+  cursor: pointer;
+  &:hover,
+  &:focus-visible {
+    outline: 1px solid $orange;
+  }
+}
