--- a/src/app/item-popup/ItemSocketsWeapons.m.scss
+++ b/src/app/item-popup/ItemSocketsWeapons.m.scss
@@ -65,7 +65,7 @@
     }
   }
 
-  :global(.socket-container) {
+  :global(.plug) {
     padding: calc(2 / 50 * var(--item-size));
     margin-bottom: 1px;
     &:last-child {
