--- a/src/app/item-popup/ArchetypeSocket.m.scss
+++ b/src/app/item-popup/ArchetypeSocket.m.scss
@@ -7,7 +7,7 @@
     margin-right: 2px;
   }
 
-  :global(.socket-container) {
+  :global(.plug) {
     padding: 4px;
   }
 
@@ -49,7 +49,7 @@
     align-items: center;
   }
 
-  :global(.socket-container) img {
+  :global(.plug) img {
     width: calc(24 / 50 * var(--item-size));
     height: calc(24 / 50 * var(--item-size));
   }
