--- a/src/app/item-popup/ItemSocketsWeapons.m.scss
+++ b/src/app/item-popup/ItemSocketsWeapons.m.scss
@@ -55,7 +55,7 @@
 
 .minimal {
   > * {
-    margin-bottom: 8px;
+    margin-bottom: 8px !important;
   }
 
   // Tighten up spacing between sockets
