--- a/src/app/item-popup/SocketDetailsSelectedPlug.m.scss
+++ b/src/app/item-popup/SocketDetailsSelectedPlug.m.scss
@@ -19,6 +19,7 @@
   }
 
   gap: 0 8px;
+
   @include phone-portrait {
     grid-template-columns: var(--item-size) 1fr;
     grid-template-areas:
@@ -44,6 +45,10 @@
   composes: flexColumn from '../dim-ui/common.m.scss';
   align-items: center;
   grid-area: mod;
+
+  :global(.item-img) {
+    border-color: #888;
+  }
 }
 
 .modDescription {
@@ -110,6 +115,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
     @include phone-portrait {
       flex-direction: row;
       justify-content: space-between;
