--- a/src/app/item-popup/ArchetypeSocket.m.scss
+++ b/src/app/item-popup/ArchetypeSocket.m.scss
@@ -7,7 +7,7 @@
     margin-right: 2px;
   }
 
-  // Shrink down the intrinsic perk - it's super small
+  // Shrink down the intrinsic perk - it's super large
   :global(.plug) {
     padding: 4px;
 
