--- a/src/app/item-popup/Plug.m.scss
+++ b/src/app/item-popup/Plug.m.scss
@@ -3,19 +3,19 @@
 // A global class because some things still tweak the size of the plug image.
 // TODO: customize with CSS vars instead
 :global(.plug) {
-  position: relative;
+  position: relative; // to position the thumbs-up correctly
   display: flex;
   flex-direction: row;
   --item-size-adjusted: calc(32 / 50 * var(--item-size));
   img,
   .perkCircle {
     --item-size: var(--item-size-adjusted);
-    -webkit-touch-callout: none;
-    display: block;
   }
 }
 
 .perkCircle {
+  display: block;
+  -webkit-touch-callout: none;
   height: var(--item-size);
   width: var(--item-size);
   border: none;
