--- a/src/app/dim-ui/PageWithMenu.m.scss
+++ b/src/app/dim-ui/PageWithMenu.m.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  padding: 0 14px 0 10px;
+  padding: 0 14px 0 14px;
 
   @include phone-portrait {
     flex-direction: column;
@@ -27,13 +27,19 @@
 
 .contents {
   flex: 1;
+  margin-top: 12px; // 8px to match the menu, plus 4px to match the padding
   width: 100%;
   box-sizing: border-box;
   h2:first-child {
-    margin-top: 8px;
+    margin-top: 0;
+  }
+
+  @include phone-portrait {
+    margin-top: 0;
   }
   :global(.issue-banner-shown) & {
     padding-bottom: $issue-banner-height;
+
     @include phone-portrait {
       padding-bottom: 0;
     }
@@ -45,36 +51,29 @@
   flex-shrink: 0;
   margin-right: 12px;
   margin-top: 8px;
+  margin-left: -4px;
+  padding: 4px; // To allow for the outline of the character selector to show
   position: sticky;
   top: calc(var(--header-height) + 8px);
-  width: 230px + 8px;
+  width: 230px;
   overflow-y: auto;
   overflow-x: hidden;
   overscroll-behavior: none;
   -webkit-overflow-scrolling: touch;
   max-height: calc(var(--viewport-height) - var(--header-height) - 8px);
 
-  > div {
-    width: 230px;
-    padding: 4px;
-  }
-
   // Add in some width when a scrollbar is present!
   // It'd be cooler if https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter existed.
   &.menuScrollbars {
-    width: 230px + 17px + 8px; // Windows scrollbars are 17px, then padding
+    margin-right: 12px + 17px + 4px; // Windows scrollbars are 17px, added to the original margin
   }
 
   @include phone-portrait {
     position: static;
     margin: 0;
-    padding: 0;
     width: 100%;
+    padding: 0;
     max-height: none;
-    > div {
-      width: 100%;
-      padding: 0;
-    }
   }
 
   ul {
