--- a/src/app/records/Record.m.scss
+++ b/src/app/records/Record.m.scss
@@ -1,5 +1,17 @@
 @use '../variables.scss' as *;
 
+.recordsGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 8px;
+  margin: 8px 0;
+
+  @include phone-portrait {
+    margin: 8px;
+    grid-template-columns: none;
+  }
+}
+
 .triumphRecord {
   position: relative;
   background: rgba(255, 255, 255, 0.05);
