--- a/src/app/records/PresentationNode.scss
+++ b/src/app/records/PresentationNode.scss
@@ -4,12 +4,6 @@
   .collapse-icon {
     margin-right: 8px;
   }
-  .node-name {
-    img {
-      height: 24px;
-      vertical-align: middle;
-    }
-  }
 
   /* indent child nodes more than their parent */
   > .presentation-node {
@@ -21,12 +15,9 @@
       &.collapsed {
         background-color: rgba(0, 0, 0, 0.4);
       }
-    }
 
-    #triumphs &,
-    #collections & {
       /* styling for completed triumph categories */
-      > .title.completed {
+      .completed {
         color: #f5dc56;
         background-color: rgba(245, 220, 86, 0.1);
         opacity: 0.7;
@@ -51,9 +42,6 @@
       }
     }
   }
-  &.only-child {
-    margin-left: 0 !important;
-  }
 
   /* always expanded (weapon icons & some top level parents(collections)) */
   /* stylelint-disable-next-line no-descending-specificity */
@@ -69,12 +57,6 @@
       background-color: rgba(0, 0, 0, 0);
       opacity: 1;
       display: flex;
-      /* margin: 8px 0 4px 2px; */
-      .node-name {
-        color: rgb(255, 255, 255);
-        font-size: 14px;
-        letter-spacing: normal;
-      }
     }
   }
 }
