--- a/src/app/item-feed/ItemFeedSidebar.m.scss
+++ b/src/app/item-feed/ItemFeedSidebar.m.scss
@@ -16,7 +16,7 @@
 }
 
 .sideTray {
-  background-color: var(--theme-background-item-feed);
+  background-color: var(--theme-item-feed-bg);
   padding: 10px;
   overflow-y: auto;
   overflow-x: hidden;
