--- a/src/app/item-popup/ArchetypeSocket.m.scss
+++ b/src/app/item-popup/ArchetypeSocket.m.scss
@@ -29,7 +29,7 @@
   align-items: flex-start;
   padding: 6px 10px;
   margin-bottom: 4px;
-  background-color: #333;
+  background-color: var(--theme-item-popup-panel-bg);
   width: 100%;
   border-bottom: none;
   box-sizing: border-box;
