--- a/src/app/dim-ui/dim-button.scss
+++ b/src/app/dim-ui/dim-button.scss
@@ -6,7 +6,7 @@
   cursor: pointer;
   padding: 4px 10px;
   display: inline-block;
-  background-color: var(--theme-button);
+  background-color: var(--theme-button-bg);
   color: white;
   font-size: 12px;
   line-height: calc(16 / 12);
@@ -53,7 +53,7 @@
     &:hover,
     &:active,
     &.selected {
-      background-color: var(--theme-button) !important;
+      background-color: var(--theme-button-bg) !important;
       color: white !important;
       img {
         filter: drop-shadow(0 0 1px black);
