--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -47,6 +47,9 @@
 
   // prevents content shift with persistent scroll-y bar
   overflow-y: scroll;
+
+  // Expose primary brand colour as a css variable so it can be used directly in _theme.scss
+  --dim-brand: #{$dim-brand};
 }
 
 @media (max-width: 1025px) {
@@ -209,7 +212,7 @@ input[type='search'] {
 textarea {
   width: 100%;
   height: 30px;
-  background-color: var(--theme-input);
+  background-color: var(--theme-input-bg);
   padding: 4px 8px;
   border: none;
   outline: none;
@@ -229,7 +232,7 @@ select {
   background-position: calc(100% - 10px) center;
   background-repeat: no-repeat;
   border-radius: 0;
-  background-color: var(--theme-button);
+  background-color: var(--theme-button-bg);
   padding: 2px 28px 2px 10px;
   height: 27px;
   font-size: 12px;
