Organizer row color variables

--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -55,4 +55,8 @@
 
   // Item sheet (compare, armory)
   --theme-item-sheet-bg: var(--theme-fill-modal);
+
+  // Organizer
+  --theme-organizer-row-odd-bg: #27263a;
+  --theme-organizer-row-even-bg: #1d1c2b;
 }
